amend to a fund finder

--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>FlightFinder</title>
+    <title>Funds and Fings</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    <script type="blazor-boot"></script>
+    <script type="blazor-boot">
+    </script>
 </head>
 <body>
-    Loading...
+    <h3> Loading Funds and Fings, standby for joy...</h3>
+    <img src="tenor.gif" />
 </body>
 </html>
