--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -4,14 +4,19 @@
     <meta charset="utf-8" />
     <title>Funds and Fings</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <base href="/" />
+  <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <script type="blazor-boot">
     </script>
 </head>
 <body>
-    <h3> Loading Funds and Fings, standby for joy...</h3>
-    <img src="tenor.gif" />
+    <div class="row">
+        <h3> Loading Funds and Fings, standby for joy...</h3>
+    </div>
+    
+    <div class="row">
+        <img src="./tenor.gif" />
+    </div>
 </body>
 </html>
