--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="row">
-        <img src="./tenor.gif" />
+        <img src="./tenor.gif" width="200px"/>
     </div>
 </body>
 </html>
