--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="row">
-        <h3> Loading Funds and Fings, standby for joy...</h3>
+        <h3> Loading Funds and Fings, standby ...</h3>
     </div>
     
     <div class="row">
-        <img src="./tenor.gif" width="200px"/>
+        <img src="./tenor.gif" width="200" height="200"/>
     </div>
 </body>
 </html>
