--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -11,12 +11,11 @@
     </script>
 </head>
 <body>
-    <div class="row">
-        <h3> Loading Funds and Fings, standby ...</h3>
-    </div>
-    
-    <div class="row">
-        <img src="./tenor.gif" width="200" height="200"/>
+    <div class="container">
+        
+        <div class="row">
+            <img src="./tenor.gif" width="200" height="200" />
+        </div>
     </div>
 </body>
 </html>
