--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <title>Funds and Fings</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <base href="/" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="site.css" rel="stylesheet" />
     <script type="blazor-boot">
     </script>
 </head>
