--- a/FlightFinder.Client/wwwroot/index.html
+++ b/FlightFinder.Client/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Funds and Fings</title>
+    <title>Funds and Fings!</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <base href="/" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
