--- a/coding.html
+++ b/coding.html
@@ -178,7 +178,7 @@
 
 <body>
     <header class="container-fluid">
-        <p>JavaScript Challenge</p>
+        <p>JavaScript Challenge - instructions in the f12 console</p>
     </header>
     <div class="container-fluid">
         <div class="row">
