--- a/coding.html
+++ b/coding.html
@@ -99,7 +99,7 @@
             if (tableData != tableDataOld) {
                 //fill the table
 
-                if (!Array.isArray(table)) {
+                if (!Array.isArray(tableData)) {
                     console.log("this object needs to be an array!");
                 } else {
                     $("#lessonTable tbody").empty();
